Permanent failure line for successful hazard tasks: hazards | unrooted 'nogc' of type 'JS::AutoCheckCannotGC' live across GC call at dom/canvas/CanvasRenderingContext2D.cpp:5685 - DO NOT USE FOR CLASSIFICATION
Categories
(Core :: JavaScript: GC, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox113 | --- | unaffected |
firefox114 | --- | unaffected |
firefox115 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: timhuang)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: imoraru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=417598505&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Y0TDZEojRtSVvdBQOquRUw/runs/0/artifacts/public/logs/live_backing.log
[task 2023-05-31T07:50:48.805Z] grep: /builds/worker/workspace/haz-browser/rootingHazards.txt: No such file or directory
[task 2023-05-31T07:50:48.805Z] + NUM_MISSING=
[task 2023-05-31T07:50:48.805Z] + set +x
[task 2023-05-31T07:50:48.805Z] TinderboxPrint: rooting hazards<br/>
[task 2023-05-31T07:50:48.805Z] TinderboxPrint: (unsafe references to unrooted GC pointers)<br/>322
[task 2023-05-31T07:50:48.805Z] TinderboxPrint: (unnecessary roots)<br/>3730
[task 2023-05-31T07:50:48.805Z] TinderboxPrint: missing expected hazards<br/>
[task 2023-05-31T07:50:48.805Z] TinderboxPrint: heap write hazards<br/>0
[task 2023-05-31T07:50:48.807Z] TEST-UNEXPECTED-FAIL | hazards | unrooted 'nogc' of type 'JS::AutoCheckCannotGC' live across GC call at dom/canvas/CanvasRenderingContext2D.cpp:5685
[task 2023-05-31T07:50:48.808Z] ./build-haz-linux.sh: line 143: [: -gt: unary operator expected
Comment 1•2 years ago
|
||
Hi Tim! Can you please take a look at this? It seems that Bug 1816189 introduced this failure line on hazard builds. This shows up on successful runs of that task.
Backfill range.
Thank you!
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1816189
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 3•2 years ago
|
||
We calculate the canvas random noises after allocating the ArrayData
that shouldn't be GC'ed. However, GC can happen when generating the
random noises. This could have potential issue that ArrayData get GC'ed
when it shouldn't be.
This patch fixes this by moving the calculation of random noises before
allocating the Array Data.
Comment 5•2 years ago
|
||
bugherder |
Description
•