Bug 1835989 - Calculate the canvas random noises before we allocate the ArrayData in CanvasRenderingContext2D. r=lsalzman

We calculate the canvas random noises after allocating the ArrayData
that shouldn't be GC'ed. However, GC can happen when generating the
random noises. This could have potential issue that ArrayData get GC'ed
when it shouldn't be.

This patch fixes this by moving the calculation of random noises before
allocating the Array Data.

Differential Revision: https://phabricator.services.mozilla.com/D179538